--- a/Site/index.html
+++ b/Site/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/img/guia.png">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/png" href="img/guia.png">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,11 +16,11 @@
         <div id="Home">
             <nav>
                 <div class="logo">
-                    <a href="#Home"><img src="/img/logo.png" alt="logo"></a>
+                    <a href="#Home"><img src="img/logo.png" alt="logo"></a>
                 <ul class="menus"> 
                     <li><a class="menu1" href="#">EQUIPE</a>
                         <ul class="nomes">
-                            <li><a href="#">Ciro Gomes da Silva</a></li>
+                            <li><a href="#">Ciro Gomes da Silva Junior</a></li>
                             <li><a href="#">João Victor Cavalcante</a></li>
                             <li><a href="#">José Augusto Figueiredo</a></li>
                             <li><a href="#">Ramon Alves Patrício</a></li>
@@ -42,10 +42,9 @@
             </nav>
 
             <div class="centro">
-                <p class="titulo">Desafio Ambiental <br>
+                <p class="titulo" style="color: black;">Desafio Ambiental <br>
                      ECOSIT 2050
-
-                <img src="/img/imagem2.png" alt="imagem">
+                <img src="img/imagem2.png" alt="imagem">
             </div>
 
             <p class="text">Para amenizar os impactos ambientais, <br>
@@ -60,9 +59,9 @@
 
         <div id="Sobre">
             <div class="style">
-              <img class="Engrenagens" src="/img/engrenagens.png" alt="engrenagens">
+              <img class="Engrenagens" src="img/engrenagens.png" alt="engrenagens">
               <div>
-              <img class="img" src="/img/QuemSomos.png" alt="QuemSomos">
+              <img class="img" src="img/QuemSomos.png" alt="QuemSomos">
               <p class="TextSobre">Criada a partir de um trabalho escolar por um grupo de <br>
                  alunos  do curso de Engenharia de Controle e Automação do <br>
                  IFPB - Campus Cajazeiras. A ECOSIT empresa de <br>
@@ -78,7 +77,7 @@
         </div>
 
         <div id="Desafio1">
-    
+          
         </div>
 
         <div id="Desafio2">
