--- a/Site/index.html
+++ b/Site/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="img/guia.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="/img/guia.png">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,11 +16,11 @@
         <div id="Home">
             <nav>
                 <div class="logo">
-                    <a href="#Home"><img src="img/logo.png" alt="logo"></a>
+                    <a href="#Home"><img src="/img/logo.png" alt="logo"></a>
                 <ul class="menus"> 
                     <li><a class="menu1" href="#">EQUIPE</a>
                         <ul class="nomes">
-                            <li><a href="#">Ciro Gomes da Silva Junior</a></li>
+                            <li><a href="#">Ciro Gomes da Silva</a></li>
                             <li><a href="#">João Victor Cavalcante</a></li>
                             <li><a href="#">José Augusto Figueiredo</a></li>
                             <li><a href="#">Ramon Alves Patrício</a></li>
@@ -34,7 +34,7 @@
                             <li><a href="#Desafio1">Desafio 1</a></li>
                             <li><a href="#Desafio2">Desafio 2</a></li>
                             <li><a href="#Desafio3">Desafio 3</a></li>
-                            <li><a href="#">Desafio 4</a></li>
+                            <li><a href="#Desafio4">Desafio 4</a></li>
                         </ul>
                     </li> 
 
@@ -42,9 +42,10 @@
             </nav>
 
             <div class="centro">
-                <p class="titulo" style="color: black;">Desafio Ambiental <br>
+                <p class="titulo">Desafio Ambiental <br>
                      ECOSIT 2050
-                <img src="img/imagem2.png" alt="imagem">
+
+                <img src="/img/imagem2.png" alt="imagem">
             </div>
 
             <p class="text">Para amenizar os impactos ambientais, <br>
@@ -59,9 +60,9 @@
 
         <div id="Sobre">
             <div class="style">
-              <img class="Engrenagens" src="img/engrenagens.png" alt="engrenagens">
+              <img class="Engrenagens" src="/img/engrenagens.png" alt="engrenagens">
               <div>
-              <img class="img" src="img/QuemSomos.png" alt="QuemSomos">
+              <img class="img" src="/img/Titulo.png" alt="QuemSomos">
               <p class="TextSobre">Criada a partir de um trabalho escolar por um grupo de <br>
                  alunos  do curso de Engenharia de Controle e Automação do <br>
                  IFPB - Campus Cajazeiras. A ECOSIT empresa de <br>
@@ -77,14 +78,79 @@
         </div>
 
         <div id="Desafio1">
-          
+            <p class="titulo1">Reduzir o consumo de energia Poluentes</p> 
+            <p class="texto1">Não é preciso pensar muito sobre a utilização da energia sustentável <br>
+               no Brasil para conhecer seus diversos benefícios, como a preservação <br>
+               do meio ambiente, economia nas tarifas de luz e facilidade de recursos <br>
+               naturais no país, por exemplo. Por isso, seu aproveitamento vem sendo <br>
+               cada vez mais favorável, tanto para uso individual quanto conjunto em <br>
+               estabelecimentos comerciais e indústrias. Dito isso, o projeto ECOSIT <br> 
+               2050 visa mobilizar a população global para atingir dois principais <br>
+               objetivos até o ano de 2050: 1 - Utilizar a alimentação elétrica da <br>
+               empresa em 100% composta por geradores eólicos. 2 - Distribuir o "excesso" <br>
+               de energia da empresa para a parte da população mais carente.
+                </p>
+                               
+            <a class="botao" href="#Home">Voltar ao Topo ↑</a>
         </div>
 
         <div id="Desafio2">
+            <p class="titulo1">Aumentar de forma sustentável o contato da empresa com a natureza</p>
+            <p class="texto1">O desmatamento está progredindo em todo o mundo, de modo que a cada <br>
+                 ano perde-se o equivalente a 14% da área total do Japão em florestas. <br>
+                 Para realizar nosso objetivo de enriquecer a vida destes recursos naturais, <br>
+                 vamos se envolver em plantio de árvores na empresa, atividades de conservação
+                 ambiental nas proximidades da instalação e educação ambiental para os 
+                 funcionários. Assim deixando o clima mais agradável e consequentemente 
+                 diminuindo o consumo de energia além de aumentar a qualidade de vida de 
+                todos os envolvidos.
+            </p>
+            <a class="botao" href="#Home">Voltar ao Topo ↑</a>
 
         </div>
 
         <div id="Desafio3">
+            <p class="titulo1">Transformar o lixo orgânico em adubo para a área verde da empresa</p>
+            <p class="texto1">Com o aumento mundial da população e a pressão para o
+                 crescimento econômico e estilos de vida práticos, o consumo de recursos
+                  está acelerando. Com isso, a exploração em larga escala dos recursos
+                  naturais resultará em esgotamento, e o descarte adequado não será 
+                  capaz de manter o mesmo ritmo do aumento da quantidade de resíduos 
+                  gerados, resultando em poluição ambiental. Para a redução desse problema
+                  nos da ECOSIT, iremos transformar o lixo orgânico gerado pela empresa
+                  em adubo para a área verde da instalação. Desse modo, aumentando a
+                  eficiência dos recursos em direção a uma sociedade baseada na reciclagem
+                  recursos naturais.
+                </p>
+            <a class="botao" href="#Home">Voltar ao Topo ↑</a>
+
+        </div>
+
+        <div id="Desafio4">
+            <p class="titulo1">Reutilizar, diminuir e otimizar o uso da Água</p>
+            <p class="texto1">As indústrias têm enfrentado problemas no abastecimento de
+                 água em diversos estados do país. A principal solução para o problema é 
+                 poupar água, ação positiva para os negócios e importante para a conservação
+                 das bacias hidrográficas. As iniciativas de conservação da água na indústria
+                 produzem efeitos satisfatórios, gerando eficiência para o setor produtivo e,
+                 muitas vezes, reduzindo também o uso de energia e insumos.
+                </p>
+            <a class="botao" href="#impactos"> IMPACTOS ↓</a>
+
+        </div>
+
+        <div id="impactos">
+            <p class="impact">Impactos</p>
+            <p class="texto">A reciclagem reduz o consumo de matéria-prima, o descarte de lixo, <br>
+                             e a poluição do ar, da água, do solo e de certa modo diminui a <br>
+                             possibilidade de desmatamento. Dar também a possibilidade de reutilização <br>
+                             de materiais contribui para minimizar os impactos ambientais causados por <br>
+                             aterros sanitários e lixões.
+            </p>
+            <div class="logos">
+                <img class="if" src="img/IF.png" alt="">
+                <img class="logo1" src="/img/logo.png" alt="">
+            </div>
 
         </div>
     </div>
